ENH: Change package name to itk-bootstrap.

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,6 +1,6 @@
 {
   "generator-react-webpack": {
-    "appName": "itkbootstrap",
+    "appName": "itk-bootstrap",
     "style": "css",
     "postcss": false
   }
