--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": "",
   "keywords": [],
-  "author": "Your name here",
+  "author": "Insight Software Consortium",
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-eslint": "^5.0.0-beta4",
