--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "",
   "scripts": {
     "clean": "rimraf dist/*",
-    "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
+    "copybootstrap": "node copy-example-assets.js",
+    "copy": "npm run copybootstrap && copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
     "dist": "npm run copy & webpack --env=dist",
     "lint": "eslint ./src",
     "posttest": "npm run lint",
@@ -20,7 +21,7 @@
     "test:watch": "karma start --autoWatch=true --singleRun=false"
   },
   "repository": "",
-  "keywords": [],
+  "keywords": ["itk", "imaging", "medical"],
   "author": "Insight Software Consortium",
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -60,6 +61,8 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.4",
+    "bootswatch": "^3.3.6",
     "core-js": "^2.0.0",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
