ENH: Add a navbar with a title to index.html.
Some default content to know that the page renders correctly.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "test:watch": "karma start --autoWatch=true --singleRun=false"
   },
   "repository": "",
-  "keywords": ["itk", "imaging", "medical"],
+  "keywords": [
+    "itk",
+    "imaging",
+    "medical"
+  ],
   "author": "Insight Software Consortium",
   "devDependencies": {
     "babel-core": "^6.0.0",
