ENH: Add react-bootstrap components.

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "core-js": "^2.0.0",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.0",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1"
